fix contact form going off screen at 815px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -257,7 +257,7 @@ footer{
 .contact-form{
     position:relative; 
    top:50%;
-   left:30%;
+   left:35%;
    transform: translate(-50%, -50%);
     height:500px;
     width:500px;
